--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finantial-react-app",
+  "name": "financial-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
